[package]
name = "diskspace_free"
version = "0.1.0"
edition = "2024"

[dependencies]
rayon = { version = "1.5", default-features = false }
ratatui = { version = "0.26.1", default-features = false, features = ["crossterm"] }
crossterm = { version = "0.27.0", default-features = false }
tokio = { version = "1.36.0", default-features = false, features = ["rt-multi-thread", "macros", "time"] }
is-admin = { version = "0.1.1", default-features = false }
windows-sys = { version = "0.60.2", features = ["Win32_System_Memory", "Win32_System_Threading", "Win32_System_SystemServices", "Win32_System_ProcessStatus", "Win32_Foundation", "Win32_UI_Shell"] }
notify-rust = { version = "4.10.0", default-features = false }

[profile.release]
opt-level = "z"          # 最大化优化体积
lto = true               # 链接时优化
codegen-units = 1        # 减少代码生成单元
panic = "abort"          # 减少panic处理代码
strip = true             # 移除调试符号
overflow-checks = false  # 禁用溢出检查
